--- a/application/src/main/webapp/index.html
+++ b/application/src/main/webapp/index.html
@@ -27,12 +27,12 @@
 <h1>Welcome to Your Application!</h1>
 
 <a href="https://www.sap.com/s4sdk" class="svg">
-    <object data="https://help.sap.com/http.svc/rc/6c02295dfa8f47cf9c08a19f2e172901/1.0/en-US/logo.svg" type="image/svg+xml" width="150px"></object>
+    <object data="https://help.sap.com/http.svc/rc/6c02295dfa8f47cf9c08a19f2e172901/1.0/en-US/logo.svg" type="image/svg+xml"></object>
 </a>
 
 <p>
     This is your <strong>SAP Cloud Platform Cloud Foundry TomEE</strong> application
-    powered by the <strong>SAP S/4HANA Cloud SDK</strong>.
+    powered by the <strong>SAP Cloud SDK</strong>.
 </p>
 <ul>
     <li>
@@ -48,7 +48,7 @@
     </li>
 </ul>
 <p>
-    Further help and examples are available <a href="https://help.sap.com/viewer/p/SAP_S4HANA_CLOUD_SDK">here</a>.
+    Further help and examples are available <a href="https://help.sap.com/viewer/p/SAP_CLOUD_SDK">here</a>.
 </p>
 
 </body>
